--- a/css/jme.css
+++ b/css/jme.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 16px;
+  font-size: 14px;
   color: #5c5c5c;
   background-color: #111111;
   font-family: Helvetica, Arial, sans-serif;
@@ -7,7 +7,7 @@ body {
 }
 a:link, a:visited { color: #3D3D3D  ; text-decoration: underline; }
 a:hover, a:focus { text-decoration: none; background: #231F1F; color: #ffffff; }
-p { margin: 0; }
+p { margin: 0.3em 0 .3em 0; }
 div#container {
   margin: 0 auto;
   width: 960px;
