--- a/css/jme.css
+++ b/css/jme.css
@@ -1,3 +1,6 @@
+
+/* Styles for / */
+
 body {
   font-size: 14px;
   color: #5c5c5c;
@@ -39,4 +42,10 @@ ul#misses {
 }
 ul#misses li {
   margin: .25em 0 .75em 0;
+}
+
+/* Styles for /misses/(.*) */
+
+span.miss-permalink {
+  font-size: 0.5em;
 }
