--- a/css/jme.css
+++ b/css/jme.css
@@ -5,7 +5,7 @@ body {
   font-size: 14px;
   color: #5c5c5c;
   background-color: #111111;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: helvetica, arial, sans-serif;
   margin: 0;
 }
 a:link, a:visited { color: #3D3D3D  ; text-decoration: underline; }
@@ -18,10 +18,27 @@ div#container {
   overflow: hidden;
   position: relative;
 }
-h1 {
+div#header {
+  margin: 0 0 18px 0;
+}
+div#header-title {
   color: #2FC2EF;
-  font-size: 60px;
+  font-size: 40px;
   letter-spacing: -1px;
+}
+
+div#header-title a:link, div#header-title a:visited { color: #2FC2EF  ; text-decoration: none; }
+div#header-title a:hover, div#header-title a:focus { text-decoration: none; background: none; color: #2FC2EF; }
+
+
+div#header-accessories {
+  float: right;
+}
+h1 {
+  font-family: georgia, 'bitstream vera sans serif', 'lucida grande', helvetica, verdana, sans-serif;
+  font-weight: normal;
+  font-size: 50px;
+  letter-spacing: -2px;
   margin: 0 0 .25em 0;
 }
 div#misses-container {
@@ -31,7 +48,7 @@ div#misses-container {
 span.detail {
   color: #e7e13a;
   background: #231f1f;
-  font-family: 'Bitstream Vera Sans Mono', Courier, monospace;
+  font-family: 'bitstream vera sans mono', courier, monospace;
   white-space: pre;
 }
 span.justmissedearth { color: #2FC2EF; }
@@ -44,8 +61,15 @@ ul#misses li {
   margin: .25em 0 .75em 0;
 }
 
+div#footer { margin: 10px 0 10px 0; }
+
 /* Styles for /misses/(.*) */
 
 span.miss-permalink {
   font-size: 0.5em;
+}
+
+div#miss-detail-container {
+  font-size: 28px;
+  margin: .5em 0 1em 1em;
 }
