--- a/css/jme.css
+++ b/css/jme.css
@@ -68,8 +68,17 @@ div#footer { margin: 10px 0 10px 0; }
 span.miss-permalink {
   font-size: 0.5em;
 }
-
 div#miss-detail-container {
-  font-size: 28px;
-  margin: .5em 0 1em 1em;
+  font-size: 26px;
+  margin: .5em 0 1em 0;
+}
+div.miss-attribute {}
+div.miss-value {
+  padding: 3px 6px;
+  font-size: 34px;
+  color: #e7e13a;
+  background: #231f1f;
+  font-family: 'bitstream vera sans mono', courier, monospace;
+  white-space: pre;
+  margin: 0 0 20px 0;
 }
